feat: migración MSSQL, debug auth login, controles DevExtreme, docs migración
Made-with: Cursor

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Sistema de Registro de Tareas - Lidr" />
     <title>Lidr - Sistema de Registro de Tareas</title>
   </head>
-  <body>
+  <body class="dx-viewport">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
